src/test/deca/context/invalid/while-sansBooleen.deca
// Description:
//    Programme avec un while dont la condition n'est pa sde type booléen
//
// Resultats:
//         Ligne 11 : la condition n'est pas de type booléen
//
// Historique:
//    cree le 10/01/2024

{
    while (3) {
        print("yahou");
    }
}
